--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,20 @@
 .metronome-controller button {
   flex: 1;
 }
+
+footer {
+  margin-top: 60px;
+  width: 100%;
+  padding: 10px 0;
+  background-color: #f9f9f9;
+}
+
+footer a {
+  color: #888;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #000;
+}
