--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,17 @@
   flex: 1;
 }
 
+.volume-controller {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+}
+
+.volume-controller label {
+  margin-right: 10px;
+}
+
 footer {
   margin-top: 60px;
   width: 100%;
