--- a/src/Buttons.css
+++ b/src/Buttons.css
@@ -2,10 +2,11 @@
   display: flex;
   justify-content: center;
   margin-top: 30px;
+  flex-wrap: wrap;
+  gap: 5px;
 }
 
 .buttons-container button {
-  margin: 0 5px;
   padding: 10px 20px;
   font-size: 1em;
   cursor: pointer;
