--- a/src/components/BeatVisualizer/BeatVisualizer.module.css
+++ b/src/components/BeatVisualizer/BeatVisualizer.module.css
@@ -5,6 +5,10 @@
   align-items: center;
 }
 
+.beatCircle:global {
+  animation: fadeIn 0.1s ease-in;
+}
+
 .beatCircle {
   width: 20px;
   height: 20px;
