--- a/src/components/BPMController/BPMController.module.css
+++ b/src/components/BPMController/BPMController.module.css
@@ -1,20 +1,23 @@
 .bpmController {
   display: flex;
+  align-items: center;
 }
 
 .buttonsContainer {
   display: flex;
+  height: 40px;
+  align-items: center;
 }
 
 .buttonsContainer button:first-of-type {
   border: 1px solid #ddd;
-  border-radius: 8px 0px 0 8px;
+  border-radius: 6px 0px 0 6px;
 }
 
 .buttonsContainer button:last-of-type {
   border: 1px solid #ddd;
   border-left: none;
-  border-radius: 0 8px 8px 0;
+  border-radius: 0 6px 6px 0;
 }
 
 .bpmController button:hover {
