--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,4 +1,4 @@
-.slider-container {
+.sliderContainer {
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -9,6 +9,6 @@
   width: 80%;
 }
 
-.bpm-display {
+.bpmDisplay {
   font-size: 1.2em;
 }
