Refactor layout styles in App and BPMController: adjust padding and alignment for improved consistency

--- a/src/components/BPMController/BPMController.module.css
+++ b/src/components/BPMController/BPMController.module.css
@@ -1,12 +1,11 @@
 .bpmController {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .buttonsContainer {
   display: flex;
   align-items: center;
-  height: 32px;
 }
 
 .buttonsContainer button {
