--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   max-width: 600px;
-  padding: 7em 4em 4em 4em;
+  padding: 20px;
   margin: 0 auto;
   text-align: center;
   display: flex;
