--- a/src/components/BeatSelector/BeatSelector.module.css
+++ b/src/components/BeatSelector/BeatSelector.module.css
@@ -3,4 +3,8 @@
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 30px;
+  & select {
+    background-color: #f9f9f9;
+    color: black;
+  }
 }
