--- a/src/components/PlayButton/PlayButton.module.css
+++ b/src/components/PlayButton/PlayButton.module.css
@@ -1,12 +1,9 @@
 .metronomeController {
   display: flex;
-  gap: 20px;
   justify-content: center;
-  margin-top: 50px;
-}
-
-.metronomeController button {
-  flex: 1;
+  align-items: center;
+  flex: 2;
   border: 1px solid #ddd;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  gap: 4px;
 }
