--- a/src/components/VolumeController/VolumeController.module.css
+++ b/src/components/VolumeController/VolumeController.module.css
@@ -1,17 +1,22 @@
 .volumeController {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 16px;
+  flex: 1;
   border-radius: 8px;
-  margin: 20px 0 10px 0;
+  border: 1px solid #ddd;
+  padding: 14px;
 }
 
-.volumeController label {
-  margin-right: 10px;
+.slider {
+  transition: width 0.3s, transform 0.3s;
 }
 
-.volumeController input {
-  width: 65%;
+.sliderHidden {
+  composes: slider;
+  width: 0;
+}
+
+.sliderVisible {
+  composes: slider;
+  width: 100%;
 }
