--- a/src/components/AccentToggleController/AccentToggleController.module.css
+++ b/src/components/AccentToggleController/AccentToggleController.module.css
@@ -2,6 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 10px;
-  font-size: 0.8em;
+  font-size: 16px;
+  gap: 6px;
 }
